test/scc/lex/errors/004.a
004.t:1:1: error: invalid character constant